UF2 bootloader builds with MCUboot library added.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/uf2"]
 	path = lib/uf2
 	url = https://github.com/Microsoft/uf2.git
+[submodule "lib/mcuboot"]
+	path = lib/mcuboot
+	url = git@github.com-iotec:iotec-space/mcuboot.git
